# cgalpy

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
cgalpy/: __init__.py  cgal.cpp  cgal.py  main.py
