cmake_minimum_required(VERSION 3.1)
project(cgalpy)
find_package(CGAL REQUIRED COMPONENTS Core)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
set(CMAKE_BUILD_TYPE Release)
if(CGAL_FOUND)
  add_library(cgalpy SHARED cgalpy/cgal.cpp)
  target_link_libraries(cgalpy CGAL::CGAL CGAL::CGAL_Core)
  target_link_libraries(cgalpy Eigen3::Eigen)
else()
  message("ERROR: this program requires CGAL and will not be compiled.")
endif()
